Notebook version Created using Colab

--- a/LLM_Joke_generator.ipynb
+++ b/LLM_Joke_generator.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/EnuhBlaise/LLM_projects/blob/main/LLM_Joke_generator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "ATijF_kRRt-G"
       },
       "source": [
@@ -534,8 +524,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtfalA9tvtSEChaEqCVdia",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNtfalA9tvtSEChaEqCVdia"
     },
     "kernelspec": {
       "display_name": "Python 3",
